--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+#about {
+  display: flex;
+  justify-content: center;
+}
+
 .text-center {
   text-align: center;
 }
@@ -9,21 +14,18 @@
 .function {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 #preview {
-  width: 500px;
-  height: 500px;
+  width: 600px;
+  height: 600px;
   margin: auto;
   position: relative;
 }
 
 #fg {
   position: absolute;
-  width: 400px;
-  height: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
